--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: ruby
 rvm:
  - "2.2.3"
+before_script:
+  - go get -u github.com/technosophos/dashing
+  - gem install crystal-dash-docset-generator
 script: "./travis_build.sh"
