--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: ruby
 rvm:
  - "2.2.3"
+env:
+  - GOPATH=~/.go
 before_script:
   - go get -u github.com/technosophos/dashing
   - gem install crystal-dash-docset-generator
