--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: ruby
 rvm:
  - "2.2.3"
 env:
-  - GOPATH=~/.go
+  - GOPATH=/home/travis/.go
 before_script:
   - go get -u github.com/technosophos/dashing
   - gem install crystal-dash-docset-generator
